--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1 {
 }
 .input-Container input {
     flex: 1;
+    width: 80%;
     border: none;
     outline: none;
     background: transparent;
@@ -61,7 +62,7 @@ h1 {
     color: #fff;
     cursor: pointer;
     border-radius: 40px;
-    padding: 16px 40px;
+    padding: 16px 10%;
     font-size: 16px;
     font-weight: 500;
 }
